@@ -407,6 +407,16 @@
 </ul>
 <li><a href="sprite.html#pygame.sprite.groupcollide">pygame.sprite.groupcollide</a> - <font size=-1>find all Sprites that collide between two Groups</font></li>
 <li><a href="sprite.html#pygame.sprite.GroupSingle">pygame.sprite.GroupSingle</a> - <font size=-1>Group container that holds a single Sprite</font></li>
+<li><a href="sprite.html#pygame.sprite.LayeredDirty">pygame.sprite.LayeredDirty</a> - <font size=-1>LayeredDirty Group is for DirtySprites.  Subclasses LayeredUpdates.</font></li>
+<ul>
+<li><a href="sprite.html#LayeredDirty.change_layer">LayeredDirty.change_layer</a> - <font size=-1>changes the layer of the sprite</font></li>
+<li><a href="sprite.html#LayeredDirty.clear">LayeredDirty.clear</a> - <font size=-1>used to set background</font></li>
+<li><a href="sprite.html#LayeredDirty.draw">LayeredDirty.draw</a> - <font size=-1>draw all sprites in the right order onto the passed surface.</font></li>
+<li><a href="sprite.html#LayeredDirty.get_clip">LayeredDirty.get_clip</a> - <font size=-1>clip the area where to draw. Just pass None (default) to reset the clip</font></li>
+<li><a href="sprite.html#LayeredDirty.repaint_rect">LayeredDirty.repaint_rect</a> - <font size=-1>repaints the given area</font></li>
+<li><a href="sprite.html#LayeredDirty.set_clip">LayeredDirty.set_clip</a> - <font size=-1>clip the area where to draw. Just pass None (default) to reset the clip</font></li>
+<li><a href="sprite.html#LayeredDirty.set_timing_treshold">LayeredDirty.set_timing_treshold</a> - <font size=-1>sets the treshold in milliseconds</font></li>
+</ul>
 <li><a href="sprite.html#pygame.sprite.LayeredUpdates">pygame.sprite.LayeredUpdates</a> - <font size=-1>LayeredUpdates Group handles layers, that draws like OrderedUpdates.</font></li>
 <ul>
 <li><a href="sprite.html#LayeredUpdates.add">LayeredUpdates.add</a> - <font size=-1>add a sprite or sequence of sprites to a group</font></li>
